--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<DOCTYPE html>
-  <html lang="en" onclick="jump()">
-  <head>
-    <meta charset="utf-8">
-    <title>Jumper</title>
-    <link rel="stylesheet" href="style.css">
-    </head>
-  <body>
-    <div class="game">
-      <div id="character"></div>
-      <div id="obstacle"></div>
-    </div>
-    <p>Score: <span id="scoreSpan"></span></p>
+<html lang="en" onClick="jump()">
+<head>
+  <meta charset="utf-8">
+  <title>Jumper</title>
+  <link rel="stylesheet" href="style.css">
+  </head>
+<body>
+  <div class="game">
+    <div id="character"></div>
+    <div id="obstacle"></div>
+  </div>
+  <p>Score: <span id="scoreSpan"></span><p>
 </body>
-    <script src="script.js"></script>
-    </html>
+<script src="script.js"></script>
+</html>
